--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -12,5 +12,17 @@
   
   </servlet-mapping>
   
+  
+  <servlet>
+  <servlet-name>login</servlet-name>
+  <servlet-class>jdbc.Login</servlet-class>
+  
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>login</servlet-name>
+  <url-pattern>/LoginServlet</url-pattern>
+  
+  </servlet-mapping>
+  
 
 </web-app>
